# Minesweeper

./: .flake8  .gitignore  MANIFEST.in  Pipfile  README.md  color.py  config.ini  coord.py  dodo.py  field.py  gamestat.py  hexgrid.py  main.py  minepoint.py  pyproject.toml  screen.py  setup.cfg  test_coord_algorithm.py  test_coord_creation.py  test_coord_methods.py  test_hexagon_distance.py
cli/: app.py  box.py  game.py  menu.py  screen.py
docs/: cli.rst  conf.py  gui.rst  index.rst  logic.rst  utils.rst
gui/: app.py  board.py  colors.py  events.py  game.py  hexagon.py  menu.py  styles.py  widgets.py
logic/: field.py  gamestat.py
minesweeper/: __init__.py  __main__.py
minesweeper/cli/: __init__.py  app.py  box.py  color.py  game.py  menu.py  screen.py
minesweeper/gui/: __init__.py  app.py  board.py  colors.py  events.py  game.py  hexagon.py  menu.py  styles.py
minesweeper/logic/: __init__.py  field.py  gamestat.py
minesweeper/resources/: __init__.py
minesweeper/translation/: __init__.py
minesweeper/translation/ru/LC_MESSAGES/: messages.po
minesweeper/util/: __init__.py  coord.py  minepoint.py  point.py
release/: Minesweeper-0.1-py3-none-any.whl
tests/: test_coord_algorithm.py  test_coord_creation.py  test_coord_methods.py  test_coord_range.py
translation/: __init__.py
translation/ru/LC_MESSAGES/: messages.po
util/: __init__.py  coord.py  minepoint.py  point.py
