[metadata]
name = Minesweeper
version = 0.1

url = https://github.com/OzerovaDaria/Minesweeper

[options]
packages =
    minesweeper
    minesweeper.cli
    minesweeper.gui
    minesweeper.logic
    minesweeper.util
    minesweeper.resources
    minesweeper.translation
include_package_data = True
install_requires =
    blessed
    pillow

[options.package_data]
minesweeper = 
    resources/*/*
    translation/*/LC_MESSAGES/*.mo

[options.entry_points]
console_scripts =
    minesweeper = minesweeper:main
